# cap_stone_ws

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/base_model/share/base_model/: joystick.launch.py  localization_launch.py  mapping.launch.py  navigation_launch.py  online_async_launch.py  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/base_model/share/base_model/config/: drive_bot.rviz  nav2_params.yaml  willabot_lds_2d.lua
install/base_model/share/base_model/meshes/collision/: blade01.STL  cam03.STL  cam04.STL  casterSupportLeft.STL  casterWheelRight.STL  caterTyreLeft.STL  chassis.STL  tower.STL  towerLid.STL
install/base_model/share/base_model/rviz/: view.rviz
install/base_model/share/base_model/urdf/: gazebo.xacro  materials.xacro
log/: latest_build
src/base_model/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/base_model/config/: ekf.yaml  mapper_params_online_async.yaml  my_controllers.yaml  my_nav2_params.yaml
src/base_model/launch/: launch.py  launch_sim.launch.py  robot_localization.launch.py  rsp.launch.py  slam_toolbox.launch.py
src/base_model/meshes/collision/: blade02.STL  cam01.STL  casterHolderLeft.STL  casterSupportRight.STL  mowingDeck.STL  shaftRight.STL  tyre_right.STL  verin.STL
src/base_model/meshes/visual/: cam02.STL  casterHolderRight.STL  lidar.STL  shaftLeft.STL  verin02.STL  wheelLeft.STL  wheelRight.STL
src/base_model/urdf/: base_model.urdf.xacro  cameras.xacro  gazebo_controle.xacro  imu.xacro  lidar.xacro  ros2_control.xacro
(+7 files in other folders)
